# wavify-sdks

./: .env.android  .env.example  .env.linux  .envrc  .gitattributes  .gitignore  .ignore  CONTRIBUTING.md  README.md  flake.nix  justfile
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
Android/: README.md
Android/app/: build.gradle.kts
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/com/example/wavify/: Audio.kt  MainActivity.kt  RustGreetings.java  Utils.java  WavifyASR.java
Android/app/src/main/java/com/example/wavify/ui/theme/: Color.kt  Theme.kt  Type.kt
Android/app/src/main/jni/: Android.mk
Android/app/src/main/res/layout/: main_activity.xml
Android/app/src/main/res/values/: strings.xml  themes.xml
Android/gradle/wrapper/: gradle-wrapper.properties
Wavify/Lib/: WavifyLib.swift
Wavify/Wavify/: AudioRecorder.swift  ContentView.swift
Wavify/Wavify.xcodeproj/: project.pbxproj
Wavify/Wavify.xcodeproj/project.xcworkspace/xcuserdata/wavify.xcuserdatad/: UserInterfaceState.xcuserstate
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/example/wavify/: ExampleInstrumentedTest.kt
android/app/src/androidTest/java/com/example/wavify_demo/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: whisper-tiny-en.tflite
android/app/src/main/java/com/example/wavify/: MainActivity.kt  SttEngine.java  Utils.java  WavifyASR.java
android/app/src/main/java/com/example/wavify_demo/: Audio.kt  MainActivity.kt  SttEngine.java  Utils.java
android/app/src/main/jni/: Android.mk
android/app/src/main/res/layout/: main_activity.xml
android/app/src/main/res/values/: themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/example/wavify/: ExampleUnitTest.kt
android/app/src/test/java/com/example/wavify_demo/: ExampleUnitTest.kt
android/wavify/: build.gradle.kts
android/wavify/src/androidTest/java/dev/wavify/: ExampleInstrumentedTest.kt
android/wavify/src/main/java/dev/wavify/: SttEngine.kt
android/wavify/src/test/java/dev/wavify/: ExampleUnitTest.kt
assets/: alexa.wax
demos/python-demo/: .envrc  detect-wake-word.py  main.py  requirements.txt  speech-to-text.py
demos/rust-demo/: .env.example  .envrc  Cargo.toml  README.md
demos/rust-demo/src/: main.rs
ios/Wavify/: .gitignore  README.md
ios/Wavify/Lib/: WavifyLib.swift
ios/Wavify/Wavify/: AudioRecorder.swift  ContentView.swift  Info.plist  Secrets.xcconfig  WavifyApp.swift
ios/Wavify/Wavify.xcodeproj/: project.pbxproj
ios/Wavify/Wavify.xcodeproj/project.xcworkspace/xcuserdata/wavify.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Wavify/Wavify.xcodeproj/xcuserdata/wavify.xcuserdatad/xcschemes/: xcschememanagement.plist
ios/Wavify/Wavify/Assets.xcassets/Logo.imageset/: Contents.json
kotlin-kotlin/wavify/: settings.gradle
kotlin-kotlin/wavify/lib/: build.gradle
kotlin-kotlin/wavify/lib/src/main/kotlin/wavify/: FloatArrayWrapper.kt  SttEngine.kt
kotlin/wavify/lib/: build.gradle
kotlin/wavify/lib/src/main/kotlin/wavify/: SttEngine.kt
lib/: wavify_core.h
lib/WavifyCore.xcframework/: Info.pblist
lib/WavifyCore.xcframework/ios-arm64/WavifyCore.framework/: WavifyCore
lib/WavifyCore.xcframework/ios-arm64/WavifyCore.framework/Headers/: WavifyCore.h  wavify_core.h
lib/WavifyCore.xcframework/ios-arm64_x86_64-simulator/WavifyCore.framework/: Info.plist  WavifyCore
lib/WavifyCore.xcframework/ios-arm64_x86_64-simulator/WavifyCore.framework/Headers/: wavify_core.h
lib/WavifyCore.xcframework/ios-arm64_x86_64-simulator/WavifyCore.framework/Modules/: module.modulemap
lib/aarch64-apple-darwin/: libtensorflowlite_c.dylib
models/: tokenizer.json
models/whisper-tiny-de-finished-quant/: config.json
python/: .gitignore  README.md  pyproject.toml  setup.py
python/WavifyCore.xcframework/: Info.plist
python/WavifyCore.xcframework/ios-arm64/WavifyCore.framework/: Info.plist
python/WavifyCore.xcframework/ios-arm64_x86_64-simulator/WavifyCore.framework/Headers/: wavify_core.h
python/lib/aarch64-apple-darwin/: libtensorflowlite_c.dylib
python/src/wavify/: stt.py  types.py  utils.py  wakeword.py
python/wavify/: asr.py
rust/: Cargo.toml  README.md  build.rs
rust/.cargo/: config.toml
rust/examples/: main.rs
rust/src/: lib.rs
