[package]
name = "wavify"
version = "0.0.5"
authors = ["Manuel Plank <manuel@wavify.dev>"]
edition = "2021"
description = "Cross-platform and real-time speech AI including Speech-to-Text, Speech-to-Intent and Wake words"
documentation = "https://www.wavify.dev/docs"
homepage = "https://www.wavify.dev/"
license-file = "LICENSE"
keywords = ["Speech-to-Text", "STT", "ASR", "machine-learning", "Wake word"]
categories = ["multimedia::audio"]

include = [
    "**/*.rs",
    "Cargo.toml",
    "../lib/*"
]
[dependencies]
hound = "3.5.0"
libc = "0.2.147"
log = "0.4.20"
