[package]
name = "wavify"
version = "0.0.14"
authors = ["Manuel Plank <manuel@wavify.dev>"]
edition = "2021"
description = "Cross-platform and real-time speech AI including Speech-to-Text, Speech-to-Intent and Wake words"
documentation = "https://docs.rs/crate/wavify/latest"
homepage = "https://www.wavify.dev/"
license-file = "LICENSE"
keywords = ["Speech-to-Text", "stt", "asr", "machine-learning", "wake-word"]
categories = ["multimedia::audio"]

include = [
    "**/*.rs",
    "Cargo.toml",
    "lib/*"
]

[features]
default = ["download-wavify-core"]
download-wavify-core = []

[package.metadata.docs.rs]
no-default-features = true

[dependencies]
hound = "3.5.0"
libc = "0.2.147"
log = "0.4.20"

[build-dependencies]
flate2 = "1.0.30"
reqwest = { version = "0.12.4", features = ["blocking"] }
tar = "0.4.41"
tempfile = "3.10.1"
anyhow = "1.0.86"
